# micro-clap-host

./: .gitmodules  CMakeLists.txt  README.md
src/: audio-thread.cpp  generators.h  host-impl.cpp  main.cpp  micro-clap-host.h  resolve_entrypoint.cpp
